--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,37 @@
+atomicwrites==1.4.0
+attrs==21.2.0
+certifi==2021.10.8
+chardet==3.0.4
+charset-normalizer==2.0.10
+colorama==0.4.4
+coverage==6.3.2
 Django==2.2.26
 django-debug-toolbar==2.2.1
+Faker==9.8.0
+flake8==4.0.1
+idna==2.8
+iniconfig==1.1.1
+mccabe==0.6.1
 mixer==7.1.2
+more-itertools==8.11.0
+packaging==21.2
 Pillow==9.0.0
+pluggy==0.13.1
+py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==2.4.7
+pytest==6.2.4
+pytest-django==4.4.0
+pytest-pythonpath==0.7.3
+python-dateutil==2.8.2
+python-dotenv==0.20.0
+pytz==2021.3
 requests==2.26.0
 six==1.16.0
 sorl-thumbnail==12.7.0
+sqlparse==0.4.2
+text-unidecode==1.3
+toml==0.10.2
+urllib3==1.25.11
+wcwidth==0.2.5
